fix: remove dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,9 +16,11 @@
   clip-path: polygon(50% 50%, 100% 0, 100% 19.5%);
 }
 
-.dark:root {
-  --background: #0a0a0a;
-  --foreground: #ededed;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
 }
 
 ::-webkit-scrollbar {
